# Watt-Wise-Ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5be380f4a245_add_refresh_tokens_table.py  84388f07cf30_harden_schema_ondelete_deleted_at_index_.py  9e7afc6ea408_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  households.py  system.py
backend/app/core/: config.py  db.py  logging.py  middleware.py  model_registry.py  security.py
backend/app/models/: __init__.py  appliance.py  base.py  bill.py  household.py  recommendation.py  refresh_token.py  savings_event.py  user.py
backend/app/schemas/: auth.py  forecast.py  household.py  oauth.py
backend/app/services/: forecast.py
backend/models/: anomaly_v1.json  disaggregator_v1.json  forecaster_v1.json  models_manifest.json  recommender_v1.json
backend/tests/: conftest.py  test_auth.py  test_error_handling.py  test_forecast_endpoint.py  test_forecast_service.py  test_health.py  test_households.py  test_model_loading.py  test_model_registry.py
docs/: API.md  ARCHITECTURE.md  ML.md  PHASE_1_AUDIT.md  PHASE_2_AUDIT.md  PROBLEM_STATEMENT.md  RUNBOOK.md
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/e2e/: signup-to-onboarding.spec.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/providers/: query-provider.tsx
frontend/src/components/ui/: avatar.tsx  button.test.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  select.tsx  separator.tsx  tabs.tsx
frontend/src/lib/: api-client.ts  auth.ts
frontend/src/lib/validation/: auth.test.ts  auth.ts
frontend/src/types/: next-auth.d.ts
libs/wattwise_climate/: pyproject.toml
libs/wattwise_climate/reference/: city_climate_zones.csv  zone_monthly_temps.csv
libs/wattwise_climate/tests/: test_climate.py
libs/wattwise_climate/wattwise_climate/: __init__.py
libs/wattwise_tariffs/: pyproject.toml
libs/wattwise_tariffs/reference/: tariff_fixed_charges.csv  tariff_slabs.csv  tariff_tod.csv
libs/wattwise_tariffs/tests/: test_tariffs.py
libs/wattwise_tariffs/wattwise_tariffs/: __init__.py
ml/: DATA.md  MODELS.md  pyproject.toml  requirements-dev.txt  requirements.txt  train_all.py
ml/data/: generate_synthetic.py
ml/data/reference/: appliance_wattages.csv  grid_emission_factor.md
ml/evaluation/: generate_manifest.py  validate.py
ml/features/: engineering.py
ml/models/: anomaly.py  disaggregator.py  forecaster.py  recommender.py
ml/tests/: test_anomaly.py  test_disaggregator.py  test_features.py  test_generate.py  test_models_smoke.py  test_recommender.py  test_validate.py
