[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wattwise-climate"
version = "0.1.0"
description = "Shared city-to-climate-zone and zone-temperature lookup — used by both ml/ training and backend/ serving."
requires-python = ">=3.11"
dependencies = ["pandas"]

[tool.setuptools]
packages = ["wattwise_climate"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["wattwise_climate", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wattwise_climate --cov-report=term-missing"
