[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wattwise-tariffs"
version = "0.1.0"
description = "Shared Indian electricity tariff calculator — single source of truth for both ml/ training and backend/ serving."
requires-python = ">=3.11"
dependencies = ["pandas"]

[tool.setuptools]
packages = ["wattwise_tariffs"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["wattwise_tariffs", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=wattwise_tariffs --cov-report=term-missing"
